svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: busapp-service
spec:
  type: ClusterIP
  selector:
    app: busapp
  ports:
  - port: 80
    targetPort: 80
